force-app/main/default/objects/Loan__c/fields/Appliedamount__c.field-meta.xml
<CustomField>
    <fullName>Appliedamount__c</fullName>
    <label>Appliedamount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>