force-app/main/default/objects/Loan__c/fields/AppliedDate__c.field-meta.xml
<CustomField>
    <fullName>AppliedDate__c</fullName>
    <label>AppliedDate</label>
    <type>Date</type>
</CustomField>