force-app/main/default/objects/Loan__c/fields/Asserts_cost__c.field-meta.xml
<CustomField>
    <fullName>Asserts_cost__c</fullName>
    <label>Asserts cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>