force-app/main/default/objects/Loan__c/fields/Number_of_emi_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_emi_s__c</fullName>
    <formula>CASE( Type__c,
   &apos;education&apos;,20,
    &apos;house&apos;,50,
     &apos;vehicle&apos;,60,
       0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of emi&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>