force-app/main/default/objects/Loan__c/fields/Rate_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Interest__c</fullName>
    <formula>CASE ( Type__c ,
     &apos;education&apos;,0.2,
     &apos;house&apos;,0.3,
     &apos;vehicle&apos;,0.5,
      0.6)</formula>
    <label>Rate of Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>