force-app/main/default/objects/Loan__c/fields/Sanctioned_amount__c.field-meta.xml
<CustomField>
    <fullName>Sanctioned_amount__c</fullName>
    <formula>IF(

ISPICKVAL( Security__c ,&apos;Salary&apos;),
 CASE( Type__c ,
      &apos;Education&apos;,24*0.8,
      &apos;home&apos;,16*0.9,
      &apos;vehicle&apos;,82*0.7,
      &apos;personal&apos;,44*0.5,
     0
      ),
  Asserts_cost__c *0.9
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanctioned amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>